Log metrics to wandb for RSSM

--- a/dreamerv2/configs.yaml
+++ b/dreamerv2/configs.yaml
@@ -148,11 +148,10 @@ cater:
   classifier_grad_clip: 100
 
 moving_mnist:
-
   task: 'MovingMNIST_0'
   steps: 50000
   dataset_size: 10000
-  video_data_dir: '.'
+  video_data_dir: '/home/jithen/scratch/datasets'
   dyn_cell: 'gru_layer_norm'
   size: [64, 64]
   grayscale: True
@@ -161,12 +160,13 @@ moving_mnist:
   lazy_load: False
   train_iter: 10
   eval_iter: 10
-  batch_size: 50
-  batch_length: 50
+  batch_size: 4
+  batch_length: 20
   eval_batch_length: 200
   log_every: 500
   log_video_every: 5000
   train_steps: 1
+  model: 'RSSM'
 
 atari:
 
